--- a/8-Bit-Computer.qsf
+++ b/8-Bit-Computer.qsf
@@ -57,5 +57,11 @@ set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name BDF_FILE "8-Bit-Computer.bdf"
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name BDF_FILE Mux.bdf
+set_global_assignment -name BDF_FILE DMux.bdf
+set_global_assignment -name BDF_FILE Xor.bdf
+set_global_assignment -name BDF_FILE Or16.bdf
+set_global_assignment -name BDF_FILE Or8Way.bdf
+set_global_assignment -name BDF_FILE Not16.bdf
+set_global_assignment -name BDF_FILE Mux16.bdf
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
