--- a/8-Bit-Computer.qsf
+++ b/8-Bit-Computer.qsf
@@ -65,3 +65,9 @@ set_global_assignment -name BDF_FILE Or8Way.bdf
 set_global_assignment -name BDF_FILE Not16.bdf
 set_global_assignment -name BDF_FILE Mux16.bdf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name BDF_FILE Mux4Way.bdf
+set_global_assignment -name BDF_FILE Mux4Way16.bdf
+set_global_assignment -name BDF_FILE Mux8Way16.bdf
+set_global_assignment -name BDF_FILE AndMuxOr.bdf
+set_global_assignment -name BDF_FILE DMux4Way.bdf
+set_global_assignment -name BDF_FILE DMux8Way.bdf
