--- a/8-Bit-Computer.qsf
+++ b/8-Bit-Computer.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone IV E"
 set_global_assignment -name DEVICE EP4CE22F17C6
-set_global_assignment -name TOP_LEVEL_ENTITY "8-Bit-Register"
+set_global_assignment -name TOP_LEVEL_ENTITY "8-Bit-Computer"
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 13.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "18:42:27  FEBRUARY 12, 2021"
 set_global_assignment -name LAST_QUARTUS_VERSION 13.1
@@ -79,6 +79,9 @@ set_global_assignment -name BDF_FILE "And-primitive.bdf"
 set_global_assignment -name BDF_FILE "Or-primitive.bdf"
 set_global_assignment -name BDF_FILE "Not-primitive.bdf"
 set_global_assignment -name BDF_FILE "Xor-primitive.bdf"
+set_global_assignment -name BDF_FILE 2To4Decoder.bdf
+set_global_assignment -name BDF_FILE 4To2Encoder.bdf
+set_global_assignment -name BDF_FILE "RamCell-16B.bdf"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
