--- a/8-Bit-Computer.qsf
+++ b/8-Bit-Computer.qsf
@@ -51,10 +51,6 @@ set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name SEARCH_PATH "c:\\users\\djh\\documents\\github\\8-bit-computer\\library"
 set_global_assignment -name BDF_FILE "Library/Primitives/Xor-primitive.bdf"
 set_global_assignment -name BDF_FILE "Library/Primitives/Or-primitive.bdf"
@@ -90,3 +86,28 @@ set_global_assignment -name BDF_FILE "Library/50Mhz Clock Divider/divby10.bdf"
 set_global_assignment -name BDF_FILE "Library/50Mhz Clock Divider/divby5.bdf"
 set_global_assignment -name BDF_FILE "Library/50Mhz Clock Divider/divby2.bdf"
 set_global_assignment -name BDF_FILE "8-Bit-Computer.bdf"
+set_global_assignment -name BDF_FILE Library/Intermediates/Or8Bit.bdf
+set_global_assignment -name BDF_FILE Library/Intermediates/And8Bit.bdf
+set_global_assignment -name BDF_FILE Library/Intermediates/And8Bit1Way.bdf
+set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
+set_location_assignment PIN_E1 -to CLK
+set_location_assignment PIN_A2 -to CLK_RAM
+set_location_assignment PIN_A3 -to MA1
+set_location_assignment PIN_A4 -to MA2
+set_location_assignment PIN_A5 -to MA3
+set_location_assignment PIN_A7 -to MA4
+set_location_assignment PIN_A8 -to PROG_EN
+set_location_assignment PIN_A9 -to PROG_EN_PROG
+set_location_assignment PIN_B4 -to Ram0
+set_location_assignment PIN_B5 -to Ram1
+set_location_assignment PIN_B6 -to Ram2
+set_location_assignment PIN_B7 -to Ram3
+set_location_assignment PIN_B12 -to Ram4
+set_location_assignment PIN_B13 -to Ram5
+set_location_assignment PIN_D5 -to Ram6
+set_location_assignment PIN_D6 -to Ram7
+set_location_assignment PIN_C2 -to RAM_PROG_RE
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
